--- a/public/index.html
+++ b/public/index.html
@@ -5,17 +5,24 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    
     <title>PDV</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
+  <script type="text/javascript">
+    function afterLogout(){
+      require('electron').ipcRenderer.postMessage('logout')
+    }
+    function getData(){
+      let url = new URL(location.href);
+      window.host = 'localhost';
+      window.user_id = url.searchParams.get('user_id');
+      window.user_session_value = url.searchParams.get('user_session_value');
+    }
+  </script>
 </html>
