--- a/public/index.html
+++ b/public/index.html
@@ -15,14 +15,17 @@
     <div id="root"></div>
   </body>
   <script type="text/javascript">
-    function afterLogout(){
-      require('electron').ipcRenderer.postMessage('logout')
+    function about(){
+    	require('electron').ipcRenderer.postMessage('about');
+    }
+	function afterLogout(){
+    	require('electron').ipcRenderer.postMessage('logout');
     }
     function getData(){
-      let url = new URL(location.href);
-      window.host = 'localhost';
-      window.user_id = url.searchParams.get('user_id');
-      window.user_session_value = url.searchParams.get('user_session_value');
+		let url = new URL(location.href);
+		window.host = 'localhost';
+		window.user_id = url.searchParams.get('user_id');
+		window.user_session_value = url.searchParams.get('user_session_value');
     }
   </script>
 </html>
