--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>PDV</title>
+    <title>Checkout</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -20,6 +20,9 @@
     }
 	function afterLogout(){
     	require('electron').ipcRenderer.postMessage('logout');
+    }
+	function openDevTools(){
+    	require('electron').ipcRenderer.postMessage('openDevTools', 'appWindow');
     }
     function getData(){
 		let url = new URL(location.href);
